[package]
name = "slurm-docker"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dirs = "6.0.0"
hex = "0.4.3"
object_store = "0.12.5"
paste = "1.0.15"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
shell-words = "1.1.1"
tempfile = "3.27.0"
thiserror = "2.0.18"
