[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slurm-docker"
version = "0.1.0"
description = "Slurm Docker management utilities"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
]

[project.scripts]
docker = "slurm_docker.cli:main"

[tool.hatch.build]
dev-mode-dirs = ["src"]
